Modification du fichier index.html.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=pacman-backend.html" />
+  <meta http-equiv="refresh" content="0; url=pacman-fronted.html" />
   <title>Redirection...</title>
 </head>
 <body>
